tests/read_only_array_polarity/read_only_array_polarity.exp
Error ------------------------------------------------------------ test.js:16:38

Error: test.js:16
 16:     bad (x: number) : $ReadOnlyArray<T> {// Error: T in covariant position
                                          ^ Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
  References:
   15: class Baz<-T> {
                  ^ [1]: `T`

Error ------------------------------------------------------------ test.js:22:28

Error: test.js:22
 22:     bad (x: $ReadOnlyArray<T> => number) : number {// Error: T used covariantly
                                ^ Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
  References:
   21: class ContraBaz<-T> {
                        ^ [1]: `T`


Found 2 errors
